民事訴訟法 2003.6.6

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -158,7 +158,9 @@
 
 > 釋：一、在實體法上，法人由其代表人代為法律行為，照同一法理，有權代表法人者，在訴訟法上亦應以代表人之身分代表法人為訴訟行為。雖司法院院解字第二九三六號解釋認為法人之代表人，在訴訟法上視作法定代理人，惟本法對此尚無明文規定，爰於本條增列本法關於法定代理之規定，於法人之代表人準用之，以利適用。二、本法第四十條增列第四項規定中央或地方機關亦有當事人能力，則該機關長官代表該機關為訴訟行為或受訴訟行為時，自亦有法定代理規定之準用，爰於條文中管理人之下增列「第四項機關之代表人」，以資配合。
 
-* 53 二人以上於左列各款情形，得為共同訴訟人，一同起訴或一同被訴：一、為訴訟標的之權利或義務，為其所共同者。二、為訴訟標的之權利或義務，本於同一之事實上及法律上原因者。三、為訴訟標的之權利或義務，係同種類，而本於事實上及法律上同種類之原因者。但以被告之住所在同一法院管轄區域內，或有第四條至第十九條所定之共同管轄法院者為限。
+* 53 二人以上於下列各款情形，得為共同訴訟人，一同起訴或一同被訴：一、為訴訟標的之權利或義務，為其所共同者。二、為訴訟標的之權利或義務，本於同一之事實上及法律上原因者。三、為訴訟標的之權利或義務，係同種類，而本於事實上及法律上同種類之原因者。但以被告之住所在同一法院管轄區域內，或有第四條至第十九條所定之共同管轄法院者為限。
+
+> 釋：「左列」修正為「下列」。
 
 * 54 就他人間之訴訟，有下列情形之一者，得於第一審或第二審本訴訟繫屬中，以其當事人兩造為共同被告，向本訴訟繫屬之法院起訴：一、對其訴訟標的全部或一部，為自己有所請求者。二、主張因其訴訟之結果，自己之權利將被侵害者。依前項規定起訴者，準用第五十六條各款之規定。
 
@@ -180,7 +182,9 @@
 
 > 釋：依實務見解有認為參加人就兩造之確定判決縱有法律上利害關係，亦不得為其輔助之當事人提起再審之訴，對於參加人程序上權利之保障，尚嫌欠周。爰增訂第三項，規定參加人於此種情形，得輔助其於前訴訟程序中所輔助之一造當事人提起再審之訴。至於前訴訟程序中未參加於訴訟之第三人，則不許其於判決確定後參加訴訟同時提起再審之訴，以維持確定判決之安定性。又受訴訟告知之人雖未為參加或參加逾時，如其依第六十七條之規定視為已參加訴訟者，當然有本項規定之適用，無待明文。
 
-* 59 參加，應提出參加書狀於本訴訟繫屬之法院為之。參加書狀，應表明左列各款事項：一、本訴訟及當事人。二、參加人於本訴訟之利害關係。三、參加訴訟之陳述。法院應將參加書狀，送達於兩造。
+* 59 參加，應提出參加書狀，於本訴訟繫屬之法院為之。參加書狀，應表明下列各款事項：一、本訴訟及當事人。二、參加人於本訴訟之利害關係。三、參加訴訟之陳述。法院應將參加書狀，送達於兩造。
+
+> 釋：「左列」修正為「下列」。
 
 * 60 當事人對於第三人之參加，得聲請法院駁回。但對於參加未提出異議而已為言詞辯論者，不在此限。關於前項聲請之裁定，得為抗告。駁回參加之裁定未確定前，參加人得為訴訟行為。
 
@@ -362,9 +366,9 @@
 
 > 釋：一、本條係新增。二、按訴訟費用係以由敗訴之當事人負擔為原則，惟在民事訴訟中，亦有屬於非訟事件性質者，例如請求分割共有物之訴、定經界之訴等，此類事件，雖以民事訴訟方式處理，惟實質上並無所謂何造勝訴敗訴之問題。若將訴訟費用完全命形式上敗訴之當事人負擔，有欠公允，爰增設本條規定，對於上述事件之訴訟費用，法院得酌量情形，命勝訴之當事人負擔其一部，以期公允。
 
-* 81 因左列行為所生之費用，法院得酌量情形，命勝訴之當事人負擔其全部或一部：一、勝訴人之行為，非為伸張或防衛權利所必要者。二、敗訴人之行為，按當時之訴訟程度，為伸張或防衛權利所必要者。
+* 81 因下列行為所生之費用，法院得酌量情形，命勝訴之當事人負擔其全部或一部：一、勝訴人之行為，非為伸張或防衛權利所必要者。二、敗訴人之行為，按當時之訴訟程度，為伸張或防衛權利所必要者。
 
-> 釋：變更所屬節次，由第一節改列第三節，條文內容未修正。
+> 釋：「左列」修正為「下列」。
 
 * 82 當事人不於適當時期提出攻擊或防禦方法，或遲誤期日或期間，或因其他應歸責於己之事由而致訴訟延滯者，雖該當事人勝訴，其因延滯而生之費用，法院得命其負擔全部或一部。
 
@@ -788,7 +792,9 @@
 
 > 釋：「推事」修正為「法官」。
 
-* 203 法院因闡明或確定訴訟關係，得為左列各款之處置：一、命當事人或法定代理人本人到場。二、命當事人提出圖案、表冊、外國文文書之譯本或其他文書、物件。三、將當事人或第三人提出之文書、物件，暫留置於法院。四、依第二編第一章第三節之規定，行勘驗、鑑定或囑託機關、團體為調查。
+* 203 法院因闡明或確定訴訟關係，得為下列各款之處置：一、命當事人或法定代理人本人到場。二、命當事人提出圖案、表冊、外國文文書之譯本或其他文書、物件。三、將當事人或第三人提出之文書、物件，暫留置於法院。四、依第二編第一章第三節之規定，行勘驗、鑑定或囑託機關、團體為調查。
+
+> 釋：「左列」修正為「下列」。
 
 * 204 當事人以一訴主張之數項標的，法院得命分別辯論。但該數項標的或其攻擊或防禦方法有牽連關係者，不得為之。
 
@@ -802,9 +808,9 @@
 
 > 釋：本條於五十七年修正時，為避免使人誤解為法院得禁止當事人為適當完全之辯論，而將文字修正為法院得命限制其種類而為辯論，然何謂「限制其種類」，更滋誤會，不若簡明規定為「法院得命限制辯論」為佳，爰修正之。
 
-* 207 參與辯論人如不通中華民國語言，法院應用通譯；法官不通參與辯論人所用之方言者，亦同。參與辯論人如為聾、啞人，法院應用通譯。但亦得以文字發問或使其以文字陳述。
+* 207 參與辯論人如不通中華民國語言，法院應用通譯；法官不通參與辯論人所用之方言者，亦同。參與辯論人如為聾、啞人，法院應用通譯。但亦得以文字發問或使其以文字陳述。關於鑑定人之規定，於前二項通譯準用之。
 
-> 釋：一、第一項之「推事」修正為「法官」。二、參與辯論人如為聾啞之人，現行實務多以通譯代為溝通，而無須先判斷該聾啞人是否能用文字表達意思。爰將第二項修正為以使用通譯為原則，但亦得以文字發問或使其以文字陳述，以利適用。
+> 釋：本條第三項於前次修正時漏列，爰予以回復之。
 
 * 208 當事人欠缺陳述能力者，法院得禁止其陳述。前項情形，除有訴訟代理人或輔佐人同時到場者外，應延展辯論期日；如新期日到場之人再經禁止陳述者，得視同不到場。前二項之規定，於訴訟代理人或輔佐人欠缺陳述能力者準用之。
 
@@ -820,7 +826,9 @@
 
 > 釋：一、「左列」修正為「下列」；「推事」修正為「法官」。二、書記官製作言詞辯論筆錄應記載事項，原第四款所列除到場當事人等之姓名外，尚應包括其他經通知到場之人姓名，例如參加人、證人、鑑定人等是，爰予修正，以臻周延。
 
-* 213 言詞辯論筆錄內應記載辯論進行之要領，並將左列各款事項，記載明確：一、訴訟標的之捨棄、認諾及自認。二、證據之聲明或捨棄及對於違背訴訟程序規定之異議。三、依本法規定應記載筆錄之其他聲明或陳述。四、證人或鑑定人之陳述及勘驗所得之結果。五、不作裁判書附卷之裁判。六、裁判之宣示。除前項所列外，當事人所為重要聲明或陳述，及經曉諭而不為聲明或陳述之情形，審判長得命記載於筆錄。
+* 213 言詞辯論筆錄內，應記載辯論進行之要領，並將下列各款事項，記載明確：一、訴訟標的之捨棄、認諾及自認。二、證據之聲明或捨棄及對於違背訴訟程序規定之異議。三、依本法規定應記載筆錄之其他聲明或陳述。四、證人或鑑定人之陳述及勘驗所得之結果。五、不作裁判書附卷之裁判。六、裁判之宣示。除前項所列外，當事人所為重要聲明或陳述，及經曉諭而不為聲明或陳述之情形，審判長得命記載於筆錄。
+
+> 釋：「左列」修正為「下列」。
 
 * 213.1 法院得依當事人之聲請或依職權，使用錄音機或其他機器設備，輔助製作言詞辯論筆錄。其辦法，由司法院定之。
 
@@ -1154,7 +1162,9 @@
 
 > 釋：一、原條文不修正，列為第一項。二、為促使當事人善盡其協力迅速進行訴訟之義務，並貫徹適時提出主義之精神，以達到審理集中化之目標，爰增訂第二項，明定證人有二人以上時，當事人應一併聲明之。
 
-* 299 通知證人，應於通知書記載左列各款事項：一、證人及當事人。二、證人應到場之日、時及處所。三、證人不到場時應受之制裁。四、證人請求日費及旅費之權利。五、法院。審判長如認證人非有準備不能為證言者，應於通知書記載訊問事項之概要。
+* 299 通知證人，應於通知書記載下列各款事項：一、證人及當事人。二、證人應到場之日、時及處所。三、證人不到場時應受之制裁。四、證人請求日費及旅費之權利。五、法院。審判長如認證人非有準備不能為證言者，應於通知書記載訊問事項之概要。
+
+> 釋：「左列」修正為「下列」。
 
 * 300 通知現役軍人為證人者，審判長應併通知該管長官令其到場。被通知者如礙難到場，該管長官應通知其事由於法院。
 
@@ -1180,9 +1190,13 @@
 
 > 釋：第一項所以規定應得該監督長官或民意機關之同意者，乃慮及證人之陳述有妨害國家利益之虞，如該訊問事項無害於國家之利益，該監督長官或民意機關自應予以同意，爰增訂第二項之規定，俾資適用。
 
-* 307 證人有左列各款情形之一者，得拒絕證言：一、證人為當事人之配偶、前配偶、未婚配偶或四親等內之血親、三親等內之姻親或曾有此親屬關係者。二、證人所為證言，於證人或與證人有前款關係之人足生財產上之直接損害者。三、證人所為證言，足致證人或與證人有第一款關係或有監護關係之人受刑事訴追或蒙恥辱者。四、證人就其職務上或業務上有秘密義務之事項受訊問者。五、證人非洩漏其技術上或職業上之秘密不能為證言者。得拒絕證言者，審判長應於訊問前或知有前項情形時告知之。
+* 307 證人有下列各款情形之一者，得拒絕證言：一、證人為當事人之配偶、前配偶、未婚配偶或四親等內之血親、三親等內之姻親或曾有此親屬關係者。二、證人所為證言，於證人或與證人有前款關係之人，足生財產上之直接損害者。三、證人所為證言，足致證人或與證人有第一款關係或有監護關係之人受刑事訴追或蒙恥辱者。四、證人就其職務上或業務上有秘密義務之事項受訊問者。五、證人非洩漏其技術上或職業上之秘密不能為證言者。得拒絕證言者，審判長應於訊問前或知有前項情形時告知之。
 
-* 308 證人有前條第一項第一款或第二款情形者，關於左列各款事項，仍不得拒絕證言：一、同居或曾同居人之出生、死亡、婚姻或其他身分上之事項。二、因親屬關係所生財產上之事項。三、為證人而知悉之法律行為之成立及其內容。四、為當事人之前權利人或代理人，而就相爭之法律關係所為之行為。證人雖有前條第一項第四款情形，如其秘密之責任已經免除者，不得拒絕證言。
+> 釋：「左列」修正為「下列」。
+
+* 308 證人有前條第一項第一款或第二款情形者，關於下列各款事項，仍不得拒絕證言：一、同居或曾同居人之出生、死亡、婚姻或其他身分上之事項。二、因親屬關係所生財產上之事項。三、為證人而知悉之法律行為之成立及其內容。四、為當事人之前權利人或代理人，而就相爭之法律關係所為之行為。證人雖有前條第一項第四款情形，如其秘密之責任已經免除者，不得拒絕證言。
+
+> 釋：「左列」修正為「下列」。
 
 * 309 證人拒絕證言，應陳明拒絕之原因、事實，並釋明之。但法院酌量情形，得令具結以代釋明。證人於訊問期日前拒絕證言者，毋庸於期日到場。前項情形，法院書記官應將拒絕證言之事由，通知當事人。
 
@@ -1204,7 +1218,9 @@
 
 > 釋：一、本條新增。二、本法增設證人得於法院外以書狀為陳述之規定，惟證人以書狀為陳述時，其具結之程序與證人到庭以言詞陳述者不同，不適用第三百十三條之規定，爰增訂本條。
 
-* 314 以未滿十六歲或因精神障礙不解具結意義及其效果之人為證人者，不得令其具結。以左列各款之人為證人者，得不令其具結：一、有第三百零七條第一項第一款至第三款情形而不拒絕證言者。二、當事人之受僱人或同居人。三、就訴訟結果有直接利害關係者。
+* 314 以未滿十六歲或因精神障礙不解具結意義及其效果之人為證人者，不得令其具結。以下列各款之人為證人者，得不令其具結：一、有第三百零七條第一項第一款至第三款情形而不拒絕證言者。二、當事人之受僱人或同居人。三、就訴訟結果有直接利害關係者。
+
+> 釋：「左列」修正為「下列」。
 
 * 315 第三百十一條之規定，於證人拒絕具結者準用之。
 
@@ -1820,9 +1836,9 @@
 
 > 釋：一、本條係新增。二、為避免當事人以同一理由對於第二審裁判提起再審之訴或聲請再審，致增法院不必要之勞費，爰明定此種情形不得更以同一理由對於第二審裁判提起再審之訴或聲請再審。
 
-* 436.32 第四百三十六條之十三、第四百三十六條之十四、第四百三十六條之十九、第四百三十六條之二十一及第四百三十六條之二十二之規定，於小額事件之上訴程序準用之。第四百三十八條至第四百四十五條、第四百四十八條至第四百五十條、第四百五十四條、第四百五十五條、第四百五十九條、第四百六十二條、第四百六十三條、第四百六十八條、第四百六十九條第一款至第五款、第四百七十一條至第四百七十三條及第四百七十五條第一項之規定，於小額事件之上訴程序準用之。第四編之規定，於小額事件之抗告程序準用之。第五編之規定，於小額事件之再審程序準用之。
+* 436.32 第四百三十六條之十四、第四百三十六條之十九、第四百三十六條之二十一及第四百三十六條之二十二之規定，於小額事件之上訴程序準用之。第四百三十八條至第四百四十五條、第四百四十八條至第四百五十條、第四百五十四條、第四百五十五條、第四百五十九條、第四百六十二條、第四百六十三條、第四百六十八條、第四百六十九條第一款至第五款、第四百七十一條至第四百七十三條及第四百七十五條第一項之規定，於小額事件之上訴程序準用之。第四編之規定，於小額事件之抗告程序準用之。第五編之規定，於小額事件之再審程序準用之。
 
-> 釋：為節省勞費，許法院於兩造同意或依上訴意旨足認上訴無理由時，不經言詞辯論而判決，爰增訂之。
+> 釋：第四百三十六條之十三業已刪除，爰配合修正。
 
 * 436.4 依第四百三十六條之二第一項提起上訴或抗告者，應同時表明上訴或抗告理由；其於裁判宣示後送達前提起上訴或抗告者，應於裁判送達後十日內補具之。未依前項規定表明上訴或抗告理由者，毋庸命其補正，由原法院裁定駁回之。
 
@@ -2238,9 +2254,9 @@
 
 > 釋：一、債權人於請准假扣押裁定後，如已提起本案訴訟，則其請求權是否存在，應待本案判決確定，始得判斷有無情事變更，爰於第一項增列「債權人受本案敗訴判決確定」之例示，以杜疑義。至起訴後，有因清償、抵銷、拋棄權利等原因而終結訴訟者，仍應就具體情形斟酌其是否為其他之情事變更。二、原第二項所規定得撤銷假扣押裁定之事由，於法院依第五百二十七條命為假扣押裁定中已記載債務人可依相同事由聲請撤銷假扣押，且債務人如依本項規定聲請撤銷假扣押裁定，經准許後，執行名義即因撤銷而不存在，當事人原依假扣押裁定所供之擔保或提存，均將失所依據，實非妥適，爰將之刪除，並配合修正第五百二十七條。三、撤銷假扣押裁定之性質及所生之影響與對假扣押裁定抗告者相同，爰增設第二項準用規定，俾利適用。四、為配合原第二項之刪除，爰將第四項下之「前三項」，修正為「第一項及前項」。
 
-* 531 假扣押裁定因自始不當而撤銷，或因第五百二十九條第二項及第五百三十條第三項之規定而撤銷者，債權人應賠償債務人因假扣押或供擔保所受之損害。假扣押所保全之請求已起訴者，法院於第一審言詞辯論終結前，應依債務人之聲明，於本案判決內命債權人為前項之賠償。債務人未聲明者，應告以得為聲明。
+* 531 假扣押裁定因自始不當而撤銷，或因第五百二十九條第四項及第五百三十條第三項之規定而撤銷者，債權人應賠償債務人因假扣押或供擔保所受之損害。假扣押所保全之請求已起訴者，法院於第一審言詞辯論終結前，應依債務人之聲明，於本案判決內命債權人為前項之賠償。債務人未聲明者，應告以得為聲明。
 
-> 釋：一、原條文不修正，列為第一項。二、第一項債權人之賠償責任，係基於法律之規定，並不以債權人有故意或過失為要件，故法院僅須審究債務人是否因假扣押或供擔保而受有損害，及所受損害與假扣押間有無因果關係。為求訴訟經濟，如假扣押所保全之請求已起訴者，應使債務人得利用本案訴訟程序一併請求賠償，爰增訂第二項。
+> 釋：第一項中之「第五百二十九條第第二項」，於九十二年一月十四日修正後，已變更為同條第四項，爰配合修正。
 
 * 532 債權人就金錢請求以外之請求，欲保全強制執行者，得聲請假處分。假處分，非因請求標的之現狀變更，有日後不能強制執行，或甚難執行之虞者，不得為之。
 
@@ -2306,7 +2322,9 @@
 
 * 540 法院應就公示催告之聲請為裁定。法院准許聲請者，應為公示催告。
 
-* 541 公示催告，應記載左列各款事項：一、聲請人。二、申報權利之期間及在期間內應為申報之催告。三、因不申報權利而生之失權效果。四、法院。
+* 541 公示催告，應記載下列各款事項：一、聲請人。二、申報權利之期間及在期間內應為申報之催告。三、因不申報權利而生之失權效果。四、法院。
+
+> 釋：「左列」修正為「下列」。
 
 * 542 公示催告之公告，應黏貼於法院之公告處，並登載於公報、新聞紙或其他相類之傳播工具。前項登載公報、新聞紙或其他相類之傳播工具之日期或期間，由法院定之。聲請人未依前項規定登載者，視為撤回公示催告之聲請。
 
@@ -2382,9 +2400,9 @@
 
 * 567 公示催告程序，因提出證券或其他原因未為除權判決而終結者，法院應依職權以裁定撤銷禁止支付之命令。禁止支付命令之撤銷，應準用第五百六十一條之規定公告之。
 
-* 568 婚姻無效或撤銷婚姻，與確認婚姻成立或不成立及離婚或夫妻同居之訴，專屬夫妻之住所地或夫、妻死亡時住所地之法院管轄。但訴之原因事實發生於夫或妻之居所地者，得由各該居所地之法院管轄。夫妻之住所地法院不能行使職權或在中華民國無住所或其住所不明者，準用第一條第一項後段及第二項之規定。夫或妻為中華民國人，不能依前二項規定，定管轄之法院者，由中央政府所在地之法院管轄。
+* 568 婚姻無效或撤銷婚姻，與確認婚姻成立或不成立及離婚或夫妻同居之訴，專屬夫妻之住所地或夫、妻死亡時住所地之法院管轄。但訴之原因事實發生於夫或妻之居所地者，得由各該居所地之法院管轄。夫妻之住所地法院不能行使職權或在中華民國無住所或其住所不明者，準用第一條第一項中段及第二項之規定。夫或妻為中華民國人，不能依前二項規定，定管轄之法院者，由中央政府所在地之法院管轄之。
 
-> 釋：一、民法第一千零零二條原規定妻以夫之住所為住所，贅夫以妻之住所為住所。修正後增設但書規定約定夫以妻之住所為住所，或妻以贅夫之住所為住所者，從其約定。惟依民法第二十條第二項「一人同時不得有兩住所」之規定，夫妻之住所必屬同一，亦即夫之住所即為妻之住所或妻之住所即為夫之住所，爰將第一項「專屬夫或贅夫之妻之住所地或其死亡時住所地」修正為「專屬夫妻之住所地或夫、妻死亡時住所地」，並將「訴之原因事實發生於夫或贅夫之妻之居所地者」，修正為「訴之原因事實發生於夫或妻之居所地者」，以求簡明。二、第二項「夫或贅夫之妻」修正為「夫妻」，說明同前。
+> 釋：第二項準用「第一條第一項後段」部分，於九十二年一月十四日修正後，變更為該條項之中段，爰配合修正。
 
 * 569 由夫或妻起訴者，以其配偶為被告。由第三人起訴者，以夫妻為共同被告。但撤銷婚姻之訴，其夫或妻死亡者，得以生存者為被告。以一人同時與二人以上結婚為理由之婚姻無效之訴，由結婚人起訴者，以其餘結婚人為被告；由第三人起訴者，以結婚人全體為共同被告。前項起訴，結婚人一方中有死亡者，以生存之結婚人為被告。
 
@@ -2414,7 +2432,9 @@
 
 > 釋：一、本條係新增。二、當事人提起撤銷婚姻、離婚等訴訟時，為使當事人及法院於該訴訟中，能併就未成年子女權利義務行使或負擔問題作通盤考量，始准由當事人於該訴訟中附帶請求，惟因其本質上仍屬非訟事件，為保障未成年子女之利益，仍應採職權探知之非訟法理。三、未成年子女之教養、保護政府應成立專責之主管機關或督導社會福利機構為之，作為衡量子女最佳利益之參考。爰於第二項予以明定，以資依據。
 
-* 576 當事人或法定代理人本人不從法院之命到場者，準用第三百零三條之規定。但不得拘提之。法院得使受命推事或受託推事訊問本人。
+* 576 當事人或法定代理人本人不從法院之命到場者，準用第三百零三條之規定。但不得拘提之。法院得使受命法官或受託法官訊問本人。
+
+> 釋：第二項「推事」修正為「法官」。
 
 * 577 離婚之訴及夫妻同居之訴，於起訴前，應經法院調解。前項調解，準用第四百零三條至第四百二十六條之規定。
 
@@ -2482,7 +2502,9 @@
 
 * 601 法院就禁治產之聲請，應斟酌聲請人所表明之事實及證據，依職權為必要之調查。調查費用，如聲請人未預納者，由國庫墊付。
 
-* 602 法院應於鑑定人前訊問應禁治產人。但有礙難訊問之情形或恐有害其健康者，不在此限。前項訊問，得使受託推事為之。
+* 602 法院應於鑑定人前訊問應禁治產人。但有礙難訊問之情形或恐有害其健康者，不在此限。前項訊問，得使受託法官為之。
+
+> 釋：第二項「推事」修正為「法官」。
 
 * 603 禁治產之宣告，非就應禁治產人之心神狀況訊問鑑定人後，不得為之。
 
@@ -2538,7 +2560,9 @@
 
 * 627 宣告死亡之聲請，應表明其原因、事實及證據。
 
-* 628 公示催告，應記載左列各款事項：一、失蹤人應於期間內陳報其生存，如不陳報，即應受死亡之宣告。二、凡知失蹤人之生死者，應於期間內將其所知陳報法院。
+* 628 公示催告，應記載下列各款事項：一、失蹤人應於期間內陳報其生存，如不陳報，即應受死亡之宣告。二、凡知失蹤人之生死者，應於期間內將其所知陳報法院。
+
+> 釋：「左列」修正為「下列」。
 
 * 629 前條陳報期間，自公示催告最後登載公報或新聞紙之日起，應有六個月以上。失蹤人滿百歲者，公示催告得僅黏貼於法院之牌示處。前項情形，其陳報期間，得定為自黏貼牌示處之日起二個月以上。
 
@@ -2562,7 +2586,9 @@
 
 * 637 第五百五十二條之規定，於以受死亡宣告人尚生存為理由，提起撤銷死亡宣告之訴者，不適用之。
 
-* 638 撤銷死亡宣告之訴有數宗者，法院應合併之，適用第五十六條第一項之規定。
+* 638 撤銷死亡宣告之訴有數宗者，法院應合併之，適用第五十六條之規定。
+
+> 釋：第五十六條第二項於九十二年一月十四日修正時，業經刪除，爰配合修正之。
 
 * 639 第五百八十一條、第五百九十四條、第五百九十五條及第六百十三條之規定，於撤銷死亡宣告之訴準用之。
 
