證券交易法 2004.1.13

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -540,9 +540,9 @@
 
 * 170 證券商同業公會及證券交易所應於章程或規則內，訂明有關仲裁之事項。但不得牴觸本法及商務仲裁條例。
 
-* 171 有左列情事之一者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金：一、違反第二十條第一項、第一百五十五條第一項、第二項或第一百五十七條之一第一項之規定者。二、已依本法發行有價證券公司之董事、監察人、經理人或受僱人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受損害者。
+* 171 有下列情事之一者，處三年以上十年以下有期徒刑，得併科新臺幣一千萬元以上二億元以下罰金：一、違反第二十條第一項、第二項、第一百五十五條第一項、第二項或第一百五十七條之一第一項之規定者。二、已依本法發行有價證券公司之董事、監察人、經理人或受僱人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受重大損害者。三、已依本法發行有價證券公司之董事、監察人或經理人，意圖為自己或第三人之利益，而為違背其職務之行為或侵占公司資產。犯前項之罪，其犯罪所得金額達新臺幣一億元以上者，處七年以上有期徒刑，得併科新臺幣二千五百萬元以上五億元以下罰金。犯第一項或第二項之罪，於犯罪後自首，如有犯罪所得並自動繳交全部所得財物者，減輕或免除其刑；並因而查獲其他共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白，如有犯罪所得並自動繳交全部所得財物者，減輕其刑；並因而查獲其他共犯者，減輕其刑至二分之一。犯第一項或第二項之罪，其犯罪所得利益超過罰金最高額時，得於所得利益之範圍內加重罰金；如損及證券市場穩定者，加重其刑至二分之一。犯第一項或第二項之罪者，其因犯罪所得財物或財產上利益，除應發還被害人、第三人或應負損害賠償金額者外，以屬於犯人者為限，沒收之。如全部或一部不能沒收時，追徵其價額或以其財產抵償之。
 
-> 釋：一、本條原規範之刑責，其低刑度可處罰金，顯不足以嚇阻違法，爰參照銀行法第一百二十五條規定，提高其刑度，將罰金刑修正為新臺幣。另就違反第一百五十七條之一之刑事責任，依第一百七十五條規定，僅為二年以下有期徒刑，相形之下，顯然無從發揮嚇阻犯罪之功能。爰將違反第一百五十七條之一第一項禁止利用內部消息買賣公司股票圖利之規定之刑罰由第一百七十五條移列本條第一款，並提高其最高刑度為七年以下有期徒刑。二、已發行有價證券公司之董事、監察人、經理人及受僱人等相關人員，使公司為不合營業常規或不利益交易行為，嚴重影響公司及投資人權益，有詐欺及背信之嫌，因受害對象包括廣大之社會投資大眾，犯罪惡性重大，實有必要嚴以懲處，爰增列處罰。
+> 釋：照黨團協商條文通過。
 
 * 172 證券交易所及證券投資信託事業之董事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
@@ -552,9 +552,9 @@
 
 > 釋：罰金型修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。
 
-* 174 有左列情事之一者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金：一、於依第三十條、第四十四條第一項至第三項或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由者。四、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。七、會計師或律師，於查核公司有關證券交易之契約、報告書或證明文件時，為不實之簽證者。主管機關對於前項第七款之情事，得予以停止執行簽證工作之處分。
+* 174 有下列情事之一者，處一年以上七年以下有期徒刑，得併科新臺幣二千萬元以下罰金：一、於依第三十條、第四十四條第一項至第三項或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由者。四、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、於前款之財務報告上簽章之經理人或主辦會計人員，為財務報告內容虛偽之記載者。但經他人檢舉、主管機關或司法機關進行調查前，已提出更正意見並提供證據向主管機關報告者，減輕或免除其刑。七、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。八、發行人之董事、經理人或受僱人違反法令、章程或逾越董事會授權之範圍，將公司資金貸與他人、或為他人以公司資產提供擔保、保證或為票據之背書，致公司遭受重大損害者。九、意圖妨礙主管機關檢查或司法機關調查，偽造、變造、湮滅、隱匿、掩飾工作底稿或有關紀錄、文件者。有下列情事之一者，處五年以下有期徒刑，得科或併科新臺幣一千五百萬元以下罰金：一、律師對公司有關證券募集、發行或買賣之契約、報告書或文件，出具虛偽或不實意見書者。二、會計師對公司申報或公告之財務報告、文件或資料有重大虛偽不實或錯誤情事，未善盡查核責任而出具虛偽不實報告或意見；或會計師對於內容存有重大虛偽不實或錯誤情事之公司財務報告，未依有關法規規定、一般公認審計準則查核，致未予敘明者。犯前項之罪，如有嚴重影響股東權益或損及證券交易市場穩定者，得加重其刑至二分之一。發行人之職員、受僱人犯第一項第六款之罪，其犯罪情節輕微者，得減輕其刑。主管機關對於有第二項第二款情事之會計師，應予以停止執行簽證工作之處分。
 
-> 釋：一、第一項第一款酌作文字修正。二、於第一項第四款及第五款分別增列公開收購人提供之表冊、文件等相關文書其內容有虛偽之記載，應予以處罰之規定。
+> 釋：照黨團協商條文通過。
 
 * 175 違反第十八條第一項、第二十二條、第二十八條之二第一項、第四十三條第一項、第四十三條之一第二項、第三項、第四十三條之五第二項、第三項、第四十三條之六第一項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。
 
@@ -572,13 +572,17 @@
 
 > 釋：罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。
 
-* 178 有左列情事之一者，處新臺幣十二萬元以上六十萬元以下罰鍰：一、違反第十四條之一第一項、第三項、第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。五、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所規定之事項者。六、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所規定之事項者。有前項第二款至第四款規定之情事，經主管機關處罰鍰，並責令限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次連續各處新臺幣二十四萬元以上一百二十萬元以下罰鍰，至辦理為止。
+* 178 有下列情事之一者，處新臺幣十二萬元以上二百四十萬元以下罰鍰：一、違反第十四條之一第一項、第三項、第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。五、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所規定之事項者。六、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所規定之事項者。有前項第二款至第四款規定之情事，經主管機關處罰鍰，並責令限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次連續各處新臺幣二十四萬元以上四百八十萬元以下罰鍰，至辦理為止。
 
-> 釋：配合增訂第十四條之一，對於違反該條之行為者，為維持行政上秩序，達規範之目的，實有處以罰鍰之必要，故於第一項第一款增訂罰則。
+> 釋：照黨團協商條文通過。
 
 * 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
 
 * 180 本法所定之罰鍰拒不繳納者，移送法院強制執行。
+
+* 180.1 犯本章之罪所科罰金達新臺幣五千萬元以上而無力完納者，易服勞役期間為二年以下，其折算標準以罰金總額與二年之日數比例折算；所科罰金達新臺幣一億元以上而無力完納者，易服勞役期間為三年以下，其折算標準以罰金總額與三年之日數比例折算。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
 * 181 本法施行前已依證券商管理辦法公開發行之公司股票或公司債券，視同依本法公開發行。
 
