刑事訴訟法 2004.3.23

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -1572,9 +1572,49 @@
 
 > 釋：一、本法第一編「總則」第十三章「裁判」第二百二十七條規定：「裁判制作裁判書者，除有特別規定外，應以正本送達於『當事人』、代理人、辯護人及其他受裁判之人。」「前項送達，自接受裁判原本之日起，至遲不得逾七日。」此外，另於第二編「第一審」第一章第三節「審判」第三百十四條規定：「判決得為上訴者，其上訴期間及提出上訴狀之法院，應於宣示時一併告知，並應記載於送達被告之判決正本。」「前項判決正本，並應送達於告訴人及告發人，告訴人於上訴期間內，得向檢察官陳述意見。」由此可知，第一審判決正本應送達於「當事人」、「告訴人」、「告發人」等人。二、惟簡易程序判決書之送達，依原條文僅為「送達於當事人」，要與前揭規定不同，學者因此有主張簡易判決之正本毋庸送達於告訴人、告發人者。三、然對於簡易判決之上訴，依本法第四百五十五條之一第三項規定：「準用刑事訴訟法第三編第一章上訴通則」，而該第一章第三百四十四條第二項係規定：「告訴人或被害人對於下級法院之判決有不服者，亦得具備理由，請求檢察官上訴。」告訴人既得依法請求檢察官上訴，倘若簡易判決正本不送達於告訴人，告訴人又如何得知判決之內容而請求檢察官上訴？邏輯上不無矛盾。為保障告訴人、告發人之權益，爰為文字修正，並明定準用第三百十四條第二項之規定，以杜爭議。
 
+* 455.10 依本編所為之科刑判決，不得上訴。但有第四百五十五條之四第一項第一款、第二款、第四款、第六款、第七款所定情形之一，或協商判決違反同條第二項之規定者，不在此限。對於前項但書之上訴，第二審法院之調查以上訴理由所指摘之事項為限。第二審法院認為上訴有理由者，應將原審判決撤銷，將案件發回第一審法院依判決前之程序更為審判。
+
+> 釋：照黨團協商條文通過。
+
 * 455.1 對於簡易判決有不服者，得上訴於管轄之第二審地方法院合議庭。依第四百五十一之一之請求所為之科刑判決，不得上訴。第一項之上訴，準用第三編第一章及第二章之規定。對於適用簡易程序案件所為裁定有不服者，得抗告於管轄之第二審地方法院合議庭。前項之抗告，準用第四編之規定。
 
 > 釋：一、對於簡易判決不服者，規定由地方法院合議庭審判，以減輕高等法院之負荷，並與民事訴訟簡易訴訟程序之上訴係由地方法院合議庭審判之修正案相為配合。二、為加強運用簡易程序，當事人依第四百五十一條之一表示願受科刑範圍或求刑範圍內科刑者，各該當事人允宜不得上訴。三、對簡易判決不服上訴者，其程序允宜增設準用之規定，以資明確。
+
+* 455.11 協商判決之上訴，除本編有特別規定外，準用第三編第一章及第二章之規定。第一百五十九條第一項、第二百八十四條之一之規定，於協商程序不適用之。
+
+> 釋：照黨團協商條文通過。
+
+* 455.2 除所犯為死刑、無期徒刑、最輕本刑三年以上有期徒刑之罪或高等法院管轄第一審案件者外，案件經檢察官提起公訴或聲請簡易判決處刑，於第一審言詞辯論終結前或簡易判決處刑前，檢察官得於徵詢被害人之意見後，逕行或依被告或其代理人、辯護人之請求，經法院同意，就下列事項於審判外進行協商，經當事人雙方合意且被告認罪者，由檢察官聲請法院改依協商程序而為判決：一、被告願受科刑之範圍或願意接受緩刑之宣告。二、被告向被害人道歉。三、被告支付相當數額之賠償金。四、被告向公庫或指定之公益團體、地方自治團體支付一定之金額。檢察官就前項第二款、第三款事項與被告協商，應得被害人之同意。第一項之協商期間不得逾三十日。
+
+> 釋：照黨團協商條文通過。
+
+* 455.3 法院應於接受前條之聲請後十日內，訊問被告並告以所認罪名、法定刑及所喪失之權利。被告得於前項程序終結前，隨時撤銷協商之合意。被告違反與檢察官協議之內容時，檢察官亦得於前項程序終結前，撤回協商程序之聲請。
+
+> 釋：照黨團協商條文通過。
+
+* 455.4 有下列情形之一者，法院不得為協商判決：一、有前條第二項之撤銷合意或撤回協商聲請者。二、被告協商之意思非出於自由意志者。三、協商之合意顯有不當或顯失公平者。四、被告所犯之罪非第四百五十五條之二第一項所定得以聲請協商判決者。五、法院認定之事實顯與協商合意之事實不符者。六、被告有其他較重之裁判上一罪之犯罪事實者。七、法院認應諭知免刑或免訴、不受理者。除有前項所定情形之一者外，法院應不經言詞辯論，於協商合意範圍內為判決。法院為協商判決所科之刑，以宣告緩刑、二年以下有期徒刑、拘役或罰金為限。當事人如有第四百五十五條之二第一項第二款至第四款之合意，法院應記載於筆錄或判決書內。法院依協商範圍為判決時，第四百五十五條之二第一項第三款、第四款並得為民事強制執行名義。
+
+> 釋：照黨團協商條文通過。
+
+* 455.5 協商之案件，被告表示所願受科之刑逾有期徒刑六月，且未受緩刑宣告，其未選任辯護人者，法院應指定公設辯護人或律師為辯護人，協助進行協商。辯護人於協商程序，得就協商事項陳述事實上及法律上之意見。但不得與被告明示之協商意見相反。
+
+> 釋：照黨團協商條文通過。
+
+* 455.6 法院對於第四百五十五條之二第一項協商之聲請，認有第四百五十五條之四第一項各款所定情形之一者，應以裁定駁回之，適用通常、簡式審判或簡易程序審判。前項裁定，不得抗告。
+
+> 釋：照黨團協商條文通過。
+
+* 455.7 法院未為協商判決者，被告或其代理人、辯護人在協商過程中之陳述，不得於本案或其他案件採為對被告或其他共犯不利之證據。
+
+> 釋：照黨團協商條文通過。
+
+* 455.8 協商判決書之製作及送達，準用第四百五十四條、第四百五十五條之規定。
+
+> 釋：照黨團協商條文通過。
+
+* 455.9 協商判決，得僅由書記官將主文、犯罪事實要旨及處罰條文記載於宣示判決筆錄，以代判決書。但於宣示判決之日起十日內，當事人聲請法院交付判決書者，法院仍應為判決書之製作。前項筆錄正本或節本之送達，準用第四百五十五條之規定，並與判決書之送達有同一之效力。
+
+> 釋：照黨團協商條文通過。
 
 * 456 裁判除關於保安處分者外，於確定後執行之。但有特別規定者，不在此限。
 
