公職人員選舉罷免法 2004.3.23

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -286,7 +286,9 @@
 
 > 釋：配合憲法增修條文第十五條規定，第一項第二款刪除監察委員選舉之規定。
 
-* 63 在投票所或開票所有左列情事之一者，主任管理員應會同主任監察員令其退出：一、在場喧嚷或干擾勸誘他人投票或不投票，不服制止者。二、攜帶武器或危險物品入場者。三、有其他不正當行為，不服制止者。選舉人有前項情事之一者，令其退出時，應將所持選舉票收回，並將事實附記於選舉人名冊內該選舉人姓名下。其情節重大者，並應專案函報各該選舉委員會。
+* 63 在投票所或開票所有下列情事之一者，主任管理員應會同主任監察員令其退出：一、在場喧嚷或干擾勸誘他人投票或不投票，不服制止者。二、攜帶武器或危險物品入場者。三、有其他不正當行為，不服制止者。選舉人有前項情事之一者，令其退出時，應將所持選舉票收回，並將事實附記於選舉人名冊內該選舉人姓名下。其情節重大者，並應專案函報各該選舉委員會。選舉人及第二十一條第三項規定之家屬，不得攜帶手機及其他攝影器材進入投票所。任何人不得於投票所裝設足以刺探選舉人圈選選舉票內容之攝影器材。
+
+> 釋：一、增列第三項。規定選舉人及家屬，不得攜帶手機及攝影器材進入投票所。二、增列第四項。禁止任何人裝設攝影器材，足以刺探圈票之內容。
 
 * 64 選舉投票或開票，遇有天災或其他不可抗力情事，致不能投票或開票時，應由投、開票所主任管理員報經直轄市、縣（市）選舉委員會核准，改定投票或開票日期或場所，其為中央公職人員、省（市）議員、省（市）長選舉或縣（市）議員、縣（市）長選舉者，並分別層報中央或省選舉委員會備查。
 
@@ -427,6 +429,10 @@
 * 93 違反第六十一條第二項或第八十一條第二項規定者或有第六十三條第一項各款情事之一經令其退出而不退出者，處二年以下有期徒刑、拘役或科新臺幣二十萬元以下罰金。
 
 > 釋：罰金部分酌量提高，文字並酌作修正。
+
+* 93.1 違反第六十三條第三項規定者，處一年以下有期徒刑、拘役或科新臺幣三萬元以下罰金。違反第六十三條第四項規定者，處五年以下有期徒刑，併科新臺幣五十萬元以下罰金，查獲之攝影器材沒收之。
+
+> 釋：一、本條新增。二、為違反第六十三條第三、四項者，明定罰則。
 
 * 94 罷免案之進行有左列情事之一者，在場助勢之人，處一年以下有期徒刑、拘役或科新臺幣十萬元以下罰金；首謀及下手實施者，處五年以下有期徒刑：一、聚眾包圍被罷免人、罷免案提議人、連署人或其辦事人員之服務機關、辦事處或住、居所者。二、以強暴、脅迫或其他非法之方法，妨害被罷免人執行職務或罷免案提議人、連署人或其辦事人員對罷免案之進行者。
 
