刑事訴訟法 2004.6.8

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -1214,17 +1214,23 @@
 
 > 釋：第一百六十一條第四項之不受理判決，亦屬形式判決，應許法院不經言詞辯論為之，爰修正本條之規定，以資適用。
 
-* 308 判決書應分別記載裁判之主文與理由；有罪之判決書並應記載事實。
+* 308 判決書應分別記載其裁判之主文與理由；有罪之判決書並應記載犯罪事實，且得與理由合併記載。
 
-> 釋：有罪判決固應將犯罪事實與理由分別記載，俾使人瞭解判決確定力之範圍。惟刑式判決及無罪判決並無犯罪事實，僅應記載主文及理由，爰予修正。
+> 釋：一、刑事有罪判決所應記載之事實應係賦予法律評價而經取捨並符合犯罪構成要件之具體社會事實。爰參考日本刑事訴訟法第三百三十五條第一項之立法例，將原條文後段所定「並應記載事實」修正為「並應記載犯罪事實」，以臻明確。二、又我國刑事訴訟法並未明文規定有罪判決之犯罪事實與理由必須分欄記載，揆諸德國或日本刑事訴訟法對於有罪判決記載事項之要求，其均認為犯罪事實之記載本為判決理由之一部分。惟因我國實務運作之慣例，係將原條文後段「並應記載事實」一語解釋為事實與理由必須分欄記載，乃致於判決理由論述時，須重複敘及犯罪事實，此徒然造成判決書篇幅之冗贅，核無必要，爰修正本條後段，凡有罪判決所應記載之犯罪事實得與理由合併記載，俾使法官能斟酌案情繁簡而予以彈性運用。
 
-* 309 有罪之判決書，應於主文內載明所犯之罪，並分別情形，記載左列事項：一、諭知之主刑、從刑或刑之免除。二、諭知六月以下有期徒刑或拘役者，如易科罰金，其折算之標準。三、諭知罰金者，如易服勞役，其折算之標準。四、諭知易以訓誡者，其諭知。五、諭知緩刑者，其緩刑之期間。六、諭知保安處分者，其處分及期間。
+* 309 有罪之判決書，應於主文內載明所犯之罪，並分別情形，記載下列事項：一、諭知之主刑、從刑或刑之免除。二、諭知有期徒刑或拘役者，如易科罰金，其折算之標準。三、諭知罰金者，如易服勞役，其折算之標準。四、諭知易以訓誡者，其諭知。五、諭知緩刑者，其緩刑之期間。六、諭知保安處分者，其處分及期間。
+
+> 釋：一、本條序文「記載『左』列事項」修正為「記載『下』列事項」，以符現行法規用語。二、鑑於有罪判決主文之作用，乃在宣示法院對於犯罪事實存否之終局判斷，並賦予刑罰執行之依據。爰參考日本刑事訴訟法第三百三十五條及其實務運作有罪判決記載之體例，刪除本條序文對於主文內應記載被告所犯之罪之規定，另配合第三百十四條之一之增訂，法院必須於有罪判決之正本內附記論罪科刑之法條內容，以俾當事人對照查閱。三、依刑法第四十一條第二項規定，併合處罰之數罪若均有同條第一項情形，其合併執行之刑縱逾有期徒刑六月，法院亦須諭知有關易科罰金之折算標準，以使檢察官執行時有所依據，本條第二款爰予配合修正。
 
 * 310 有罪之判決書，應於理由內分別情形記載左列事項：一、認定犯罪事實所憑之證據及其認定之理由。二、對於被告有利之證據不採納者，其理由。三、科刑時就刑法第五十七條或第五十八條規定事項所審酌之情形。四、刑罰有加重、減輕或免除者，其理由。五、易以訓誡或緩刑者，其理由。六、諭知保安處分者，其理由。七、適用之法律。
 
-* 310.1 有罪判決，諭知六月以下有期徒刑或拘役得易科罰金、罰金或免刑者，其判決書得僅記載判決主文、犯罪事實及證據與其認定之理由、應適用之法條。前項判決，法院認定之犯罪事實與起訴書之記載相同者，得引用之。
+* 310.1 有罪判決，諭知六月以下有期徒刑或拘役得易科罰金、罰金或免刑者，其判決書得僅記載判決主文、犯罪事實、證據名稱、對於被告有利證據不採納之理由及應適用之法條。前項判決，法院認定之犯罪事實與起訴書之記載相同者，得引用之。
 
-> 釋：裁判書類之製作每每耗費推事甚多精力，有罪判決中諭知免刑或緩刑、或科處罰金、六月以下有期徒刑或拘役得易科罰金者，當事人常均甘服而無爭，其判決書之記載允宜予以簡化，並得引用起訴書所記載之事實，以確定其既判力之範圍，而節省推事之時間、精力，使其專心致力於較複雜之案件，必有利於司法之革新。
+> 釋：本條第一項修正為：「有罪判決，諭知六月以下有期徒刑或拘役得易科罰金、罰金或免刑者，其判決書得僅記載判決主文、犯罪事實、證據名稱、對於被告有利證據不採納之理由及應適用之法條。」。二、第二項未修正。
+
+* 310.2 適用簡式審判程序之有罪判決書之製作，準用第四百五十四條之規定。
+
+> 釋：一、本條係新增。二、依本法第二百七十三條之一規定，簡式審判程式之適用，係以被告所犯為死刑、無期徒刑、最輕本刑三年以上有期徒刑以外之罪，且非屬高等法院管轄第一審之案件，又被告已就被訴事實為有罪之陳述為其前提。故而，行簡式審判程式之案件，被告所犯均非重罪，當事人對於犯罪事實之認定及應適用之處罰法律亦無爭執。為合理紓減法院製作裁判書之負擔，俾使有限司法資源能作充分有效之運用，凡適用簡式審判程式之有罪判決，其判決書之製作，應準用第四百五十四條有關簡易判決之規定。
 
 * 311 宣示判決，應自辯論終結之日起十四日內為之。
 
@@ -1235,6 +1241,10 @@
 * 313 宣示判決，不以參與審判之推事為限。
 
 * 314 判決得為上訴者，其上訴期間及提出上訴狀之法院，應於宣示時一併告知，並應記載於送達被告之判決正本。前項判決正本，並應送達於告訴人及告發人，告訴人於上訴期間內，得向檢察官陳述意見。
+
+* 314.1 有罪判決之正本，應附記論罪之法條全文。
+
+> 釋：一、本條係新增。二、現行刑事審判實務對於有罪判決，均於其判決正本附錄論罪法條全文，成效良好，爰配合修正條文第三百零九條刪除有罪判決主文罪名記載之規定，增訂本條，俾使當事人明瞭論罪科刑之實體法依據。至於裁判上一罪之情形，其判決正本所應附記之論罪法條全文包含所有成立犯罪之各罪之處罰條文，併此敘明。
 
 * 315 犯刑法偽證及誣告罪章或妨害名譽及信用罪章之罪者，因被害人或其他有告訴權人之聲請，得將判決書全部或一部登報，其費用由被告負擔。
 
@@ -1264,9 +1274,9 @@
 
 * 325 告訴或請求乃論之罪，自訴人於第一審辯論終結前，得撤回其自訴。撤回自訴，應以書狀為之。但於審判期日或受訊問時，得以言詞為之。書記官應速將撤回自訴之事由，通知被告。撤回自訴之人，不得再行自訴或告訴或請求。
 
-* 326 法院或受命法官，得於第一次審判期日前，訊問自訴人、被告及蒐集或調查證據，於發見案件係民事或利用自訴程序恫嚇被告者，得曉諭自訴人撤回自訴。前項訊問不公開之；非有必要，不得先行傳訊被告。第一項訊問及調查結果，如認為案件有第二百五十二條至第二百五十四條之情形者，得以裁定駁回自訴，並準用第二百五十三條之二第一項第一款至第四款、第二項及第三項之規定。駁回自訴之裁定已確定者，非有第二百六十條各款情形之一，不得對於同一案件再行自訴。
+* 326 法院或受命法官，得於第一次審判期日前，訊問自訴人、被告及調查證據，於發見案件係民事或利用自訴程序恫嚇被告者，得曉諭自訴人撤回自訴。前項訊問不公開之；非有必要，不得先行傳訊被告。第一項訊問及調查結果，如認為案件有第二百五十二條、第二百五十三條、第二百五十四條之情形者，得以裁定駁回自訴，並準用第二百五十三條之二第一項第一款至第四款、第二項及第三項之規定。駁回自訴之裁定已確定者，非有第二百六十條各款情形之一，不得對於同一案件再行自訴。
 
-> 釋：原第二百五十三條第二項至第四項之規定均予以刪除，另增列第二百五十三條之一、第二百五十三條之二，為兼顧被告及自訴人之權益，仍得以裁定駁回自訴，並準用第二百五十三條之二第一項第一款至第四款、第二項及第三項之規定，修正第三項，以資適用。
+> 釋：一、本法於九十二年二月六日修正公佈後，採行改良式當事人進行主義，當事人就證據之提出及調查有主導權，限於第一百六十三條第二項但書所示情形，法院始應依職權調查證據，本條第一項爰予配合修正，刪除「或蒐集」等文字，以符合改良式當事人進行主義之訴訟架構。二、法院或受命法官根據本條第一項之規定為訊問及調查後，若發見案件有第二百五十二條、第二百五十三條、第二百五十四條所定絕對不起訴或相對不起訴之事由者，得以裁定駁回自訴，並準用第二百五十三條之二第一項第一款至第四款、第二項及第三項之規定。至於自訴案件有第二百五十三條之一第一項所定以緩起訴為適當之情形者，依現行本條第三項之規定，法院固得以裁定駁回自訴，惟對於檢察官之緩起訴處分，因有第二百五十三條之三之撤銷緩起訴、繼續偵查或起訴之制度以資配合，適用上並無問題，但法院駁回自訴之裁定一旦確定後，本案即告終結，該駁回自訴之確定裁定且具有實質之確定力，縱然被告違背所應遵守或應履行之事項者，法院亦無從撤銷已確定之駁回自訴裁定而回覆審判程式，從而，就第二百五十三條之一第一項所定情形，以不賦予法院裁量駁回自訴之權限為當，本條第三項爰予修正，以符合自訴程式運作之機制。三、第二項、第四項未修正。
 
 * 327 命自訴代理人到場，應通知之；如有必要命自訴人本人到場者，應傳喚之。第七十一條、第七十二條及第七十三條之規定，於自訴人之傳喚準用之。
 
@@ -1564,9 +1574,9 @@
 
 * 453 以簡易判決處刑案件，法院應立即處分。
 
-* 454 簡易判決，應記載左列事項：一、第五十一條第一項之記載。二、犯罪之事實及證據。三、應適用之法條。四、第三百零九條各款所列事項。五、自簡易判決送達之日起十日內，得提起上訴之曉示。但不得上訴者，不在此限。前項判決書，得以簡略方式為之，如認定之犯罪事實、證據及應適用之法條，與檢察官聲請簡易判決處刑書或起訴書之記載相同者，得引用之。
+* 454 簡易判決，應記載下列事項：一、第五十一條第一項之記載。二、犯罪事實及證據名稱。三、應適用之法條。四、第三百零九條各款所列事項。五、自簡易判決送達之日起十日內，得提起上訴之曉示。但不得上訴者，不在此限。前項判決書，得以簡略方式為之，如認定之犯罪事實、證據及應適用之法條，與檢察官聲請簡易判決處刑書或起訴書之記載相同者，得引用之。
 
-> 釋：一、簡易判決書應記載其認定之犯罪事實、證據及應適用之法條，如所認定者與檢察官聲請簡易判決處刑書或起訴書記載相同者，實無必要再重複記載，為徹底簡化簡易判決書之製作，使一審法官之工作負擔能真正減輕，爰修正本條第二項規定得逕行引用之。二、第一項規定未修正。
+> 釋：一、本條序文「應記載『左』列事項」修正為「應記載『下』列事項」，以符現行法規用語。二、簡易程式乃為追求訴訟經濟所設計之制度，簡易判決雖應記載犯罪事實，以明既判力之範圍，但就法院認定犯罪事實所憑之證據，僅須於簡易判決書中依其證據之名稱加以標明特定已足，毋庸敘明證據之具體內容，爰修正本條第一項第二款，刪去「犯罪『之』事實」之『之』字，使法規用語與修正條文草案第三百零八條一致，並將「證據」修訂為「證據名稱」，澈底減輕法官製作簡易判決書之工作負擔。三、第二項未修正。
 
 * 455 書記官接受簡易判決原本後，應立即製作正本為送達，並準用第三百十四條第二項之規定。
 
