--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -34,9 +34,17 @@
 
 * 12 前條水質水量保護區域內，原有建築物及土地使用，經主管機關會商有關機關認為有貽害水質水量者，得通知所有權人或使用人於一定期間內拆除、改善或改變使用。其所受之損失，由自來水事業補償之。前項補償金額，如雙方不能達成協議時，由主管機關核定之。
 
-* 12.1 水質水量保護區依都市計畫程序劃定為水源特定區者，其土地應視限制程度減免土地增值稅、贈與稅及遺產稅。前項土地減免賦稅區域及標準，由財政部會同內政部及中央主管機關擬訂，報請行政院核定。自來水事業應於水價外附徵一定比例之費用，協助第一項土地受限地區地方建設或權益受限人。前項之一定比例及協助地方建設或權益受限人之辦法，由主管機關會商有關機關定之。
+* 12.1 水質水量保護區依都市計畫程序劃定為水源特定區者，其土地應視限制程度減免土地增值稅、贈與稅及遺產稅。前項土地減免賦稅區域及標準，由中央主管機關會同財政部、內政部及行政院原住民族委員會擬訂，報請行政院核定。
 
-> 釋：一、依「臺灣省政府功能業務與組織調整暫行條例」第四條第四項規定，行政院業將省政府所屬機關主管水資源業務指定經濟部統籌承辦。第二項爰增列中央主管機關亦為會同擬訂土地減免賦稅區域及標準之權責機關之一。二、第三項末句後之「地方建設」字下，增列「或權益受限人」等字。三、第四項首句末之「地方建設」字下，增列「或權益受限人」等字。
+> 釋：照黨團協商條文通過。
+
+* 12.2 於水質水量保護區內取用地面水或地下水者，除該區內非營利之家用及公共給水外，應向中央主管機關繳交水源保育與回饋費。其為工業用水或公共給水之公用事業，得報經中央主管機關同意後，於其公用事業費用外附徵百分之五以上百分之十五以下之費額。供農業使用者，中央主管機關及中央農業主管機關應編列預算補助。補助對象及方式之辦法，由中央主管機關會同中央農業主管機關定之。前項水源保育與回饋費之徵收項目、對象、計算方式、費率、徵收方式、繳費流程、繳納期限、繳費金額不足之追補繳、取用水資源量之計算方法及其他應遵行事項之收費辦法，由中央主管機關會商有關機關依水源或用水標的分別定之。第一項水源保育與回饋費得納入中央主管機關水資源相關基金管理運用，專供水質水量保護區內辦理水資源保育與環境生態保育基礎設施、居民公共福利回饋及受限土地補償之用，其支用項目如下：一、辦理水資源保育、排水、生態遊憩觀光設施及其他水利設施維護管理事項。二、辦理居民就業輔導、具公益性之水資源涵養與保育之地方產業輔導、教育獎助學金、醫療健保及水電費等公共福利回饋事項。三、發放因水質水量保護區之劃設，土地受限制使用之土地所有權人或相關權利人補償金事項。四、原住民族地區租稅補助事項。五、供緊急使用之準備金。六、徵收水源保育與回饋費之相關費用事項。七、使用水源保育與回饋費之必要執行事項。八、其他有關居民公益及水資源教育、研究與保育事項。前項第三款之補償應視土地使用現況、使用面積及受限制程度，發給補償金，並由主管機關與土地所有權人或相關權利人締結行政契約。補償對象以私有土地所有權人或相關權利人為優先，其發放標準及契約範本，由中央主管機關會同行政院原住民族委員會及相關部會定之。其行政契約應明訂所有權人或相關權利人土地容許使用項目、違約處罰方式等。水質水量保護區內非營利之家用自來水水費減半收取，其減收費額由水源保育與回饋費支應。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
+
+* 12.3 水資源相關基金應依各水質水量保護區分別設置專戶，各專戶並設置運用小組管理運用。專戶運用小組成員由相關中央主管機關、水質水量保護區與其用水地區地方主管機關、民意機關代表、居民代表及社會公正人士組成，其設置要點由水資源相關基金管理委員會定之。涉及原住民族地區之水質水量保護區，其專戶運用小組居民代表成員，應依比例由原住民居民代表擔任；其水源保育與回饋費，應依比例運用於原住民族地區。原依本法附徵之水源特定區協助地方建設費用，納入水源特定區專戶管理運用。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
 * 13 中央主管機關得視自來水之水源分佈、工程建設及社會經濟情形，劃定區域，實施區域供水。前項經劃定之區域，中央主管機關得因事實需要修正或變更之。
 
@@ -120,7 +128,9 @@
 
 * 40 民營自來水事業收歸公營時，其收購價格如雙方不能獲得協議，由政府及民營自來水事業各聘專家二人，再由雙方所聘之專家推定另一專家，組織評價委員會，依照左列方法，評定其價格：一、依據該自來水事業現有全部資產核實估價。二、依據該自來水事業創立之投資，及營業期內增置設備，擴充改良，一切資產價額，減去廢棄設備價額、折舊準備及其提存之各種準備金暨用戶公積金之餘額。前項另一專家人選之推定，不能獲致協議時，雙方所聘之專家應各提二人以上相等人數之專家名單，由政府及民營自來水事業共同申請所在地法院選定之。
 
-* 41 自來水事業管有之不動產及自來水設備，非經呈報省（市）主管機關核准，不得處分或設定負擔。違反前項規定者，其處分或設定負擔無效。
+* 41 自來水事業管有之不動產及自來水設備，非報經中央或直轄市主管機關核准，不得處分或設定負擔。違反前項規定者，其處分或設定負擔無效。
+
+> 釋：照黨團協商條文通過。
 
 * 42 自來水事業之工程設施標準，分別由中央及直轄市主管機關訂定之。依水利法之規定，須向水利主管機關申請核准之有關水權、水源之水利建造物，其工程設施標準，由水利主管機關核定之。
 
@@ -144,9 +154,9 @@
 
 > 釋：配合臺灣省政府功能業務及組織調整，將省主管機關訂定自來水設備檢驗辦法之規定，修正改為分別由中央及直轄市主管機關為之。
 
-* 50 自來水用戶用水設備，應依用水設備標準裝設，並經自來水事業或由自來水事業委託相關專業團體代為施檢合格，始得供水。前項用水設備標準，由中央主管機關定之。
+* 50 自來水用戶用水設備，應依用水設備標準裝設，並優先採用具省水標章之省水器材，經自來水事業或由自來水事業委託相關專業團體代為施檢合格後，始得供水。前項用水設備標準及優先採用省水器材辦法，由中央主管機關定之。
 
-> 釋：一、近年來，臺灣地區二大自來水事業，台北自來水事業處及台灣省自來水公司，業務繁重、人力不足，管理困難，殊難適應自來水事業檢驗工作，另為配合民間團體，參與政府經濟事務政策，爰將第一項予以修正。二、第二項用水設備標準之訂定，改由中央主管機關為之，以期劃一。
+> 釋：照黨團協商條文通過。
 
 * 51 自來水事業因工程上之必要，得洽商有關主管機關使用河川、溝渠、橋梁、涵洞、堤防、道路等，但以不妨礙其原有效用為限。
 
@@ -160,7 +170,9 @@
 
 > 釋：因第二條主管機關已配合臺灣省政府功能業務及組織調整暫行條例修正，爰配合刪除第一項「（局）」主管機關。
 
-* 56 自來水事業工程之設計，以登記合格之工程技師為限。
+* 56 自來水事業工程之規劃、設計、監造及鑑定，在中央主管機關指定規模以上者，應經依法登記執業之水利技師或相關專業技師簽證。但政府機關或公營自來水事業機構起造之自來水事業工程，得由該機關或機構內依法取得水利技師或相關專業技師證書者辦理。前項相關專業技師之科別，由中央主管機關會商中央技師主管機關公告之。
+
+> 釋：照黨團協商條文通過。
 
 * 57 自來水事業所聘僱之總工程師、工程師，均以登記合格之工程技師為限。其他施工、管理、化驗、操作等人員，應具有專科之技術，並經考驗合格。前項考驗辦法由中央主管機關訂定之。
 
@@ -168,13 +180,17 @@
 
 > 釋：配合臺灣省政府功能業務及組織調整，將第一項省（市）主管機關核准自來水事業營業章程之規定，修正向各該主管機關為之。
 
-* 59 自來水水價之訂定，應考量自來水供應品質，以水費收入抵償其所需成本，並獲得合理之利潤。其計算公式及詳細項目，由主管機關訂定；其由直轄市或縣（市）主管機關訂定者，應報請中央主管機關核定之。前項合理利潤，應以投資之公平價值，並參酌當地通行利率、利潤訂定。
+* 59 自來水價之訂定，應考量自來水供應品質，以水費收入抵償其所需成本，並獲得合理之利潤。其計算公式及詳細項目，由主管機關訂定；其由直轄市或縣（市）主管機關訂定者，應報請中央主管機關核定之。自來水事業依前項規定擬定水價詳細項目或調整水費，應申請主管核定之；其由直轄市或縣（市）主管機關核定者，應報中央主管機關備查。第一項合理利潤，應以投資之公平價值，並參酌當地通行利率、利潤訂定。
 
-> 釋：一、自來水之水價制訂除衡量其成本，亦應以質計價，保障國民用水權益。二、配合臺灣省政府功能業務及組織調整暫行條例，將省主管機關擬定水價計算公式及詳細項目，修正為由中央主管機關訂定；其由直轄市或縣（市）主管機關訂定者，應報請中央主管機關核定。
+> 釋：照黨團協商條文通過。
 
-* 60 自來水事業依前條規定擬定水價詳細項目或調整水費，應申請主管機關核定之；其由直轄市或縣（市）主管機關核定者，應報中央主管機關備查。
+* 60 中央主管機關應成立水價評議委員會，委員會由政府機關、學者專家、消費者團體等各界公正人士組成，負責水費之調整，其組織規程由中央主管機關定之。
 
-> 釋：配合臺灣省政府功能業務及組織調整暫行條例，將省主管機關核定水價詳細項目或調整水費之規定，修正為中央主管機關核定；其由直轄市或縣（市）主管機關核定者，應報請中央主管機關備查。
+> 釋：照黨團協商條文通過。
+
+* 60.1 為維持國民生計基本需求，中央主管機關應訂定國民基本生活用水量，並鼓勵民間參與省水技術研發，其獎勵辦法由中央主管機關定之。
+
+> 釋：照黨團協商條文通過。
 
 * 61 自來水事業在其供水區域內，對於請求供水者，非有正當理由，不得拒絕。前項請求供水者，對拒絕供水如有異議，得申請主管機關核定之。
 
@@ -242,7 +258,9 @@
 
 * 92 主管機關發現有違反第四十七條所規定之情事，得勒令改正或強制拆除。
 
-* 93 自來水管承裝商應向所在地直轄市或縣（市）政府登記始得營業。自來水管承裝商之技工，應經考驗及格給予證書始得工作。自來水管承裝商登記規則及其技工考驗辦法，由中央主管機關訂定之。
+* 93 自來水管承裝商應向所在地直轄市或縣（市）政府申請許可並加入水管工程相關同業公會始得營業。自來水管承裝商之技工，應經考驗及格給予證書始得工作。自來水管承裝商技工考驗辦法，由中央主管機關訂定之。
+
+> 釋：照黨團協商條文通過。
 
 * 93.1 自來水管承裝商登記證應懸掛於營業處所明顯易見之處，所領承辦工程手冊專供工程單位驗證之需。自來水管承裝商承辦工程所用之材料，其規格應符合規定。自來水管承裝商違反前二項規定者，原登記直轄市或縣（市）政府應予警告處分。
 
