原住民族教育法 2004.8.19

--- a/行政-教育/原住民族教育法.md
+++ b/行政-教育/原住民族教育法.md
@@ -1,22 +1,142 @@
-* 4 本法所稱主管教育行政機關：在中央為教育部；在直轄市為直轄市政府；在縣（市）為縣（市）政府。本法所定原住民民族教育事項，由原住民主管機關規劃，並會同主管教育行政機關辦理之。第一項主管教育行政機關為辦理原住民族教育事項，從事原住民族教育之相關人員，應熟悉原住民族語言文化，並得優先進用具有原住民身分之相關專業人員。
+* 1 根據憲法增修條文第十條之規定，政府應依原住民之民族意願，保障原住民之民族教育權，以發展原住民之民族教育文化，特制定本法。本法未規定者，適用其他相關法律之規定。
 
-> 釋：一、配合臺灣省政府教育廳業務調整，刪除原條文規定臺灣省政府教育廳為主管教育行政機關部分。二、將「直轄市政府教育局」修正為「直轄市政府」。
+> 釋：照黨團協商條文通過。
 
-* 30 各級政府對於原住民學生應提供教育獎助，並採取適當優惠措施，以輔導其就學及就業。
+* 2 原住民為原住民族教育之主體，政府應本於多元、平等、自主、尊重之精神，推展原住民族教育。原住民族教育應以維護民族尊嚴、延續民族命脈、增進民族福祉、促進族群共榮為目的。
 
-> 釋：為輔導原住民族學生之就學就業機會，爰明定設立各項助學措施，以鼓勵原住民族學生向學。
+> 釋：照黨團協商條文通過。
 
-* 31 各級主管教育行政機關對於從事原住民民族教育之學校、機構、團體及人員，其成效優良者，應予獎助。
+* 3 本法所稱主管教育行政機關：在中央為教育部；在直轄市為直轄市政府；在縣（市）為縣（市）政府。本法所稱原住民族主管機關：在中央為行政院原住民族委員會；在直轄市為直轄市政府；在縣（市）為縣（市）政府。原住民族之一般教育，由主管教育行政機關規劃辦理；原住民族之民族教育，由原住民族主管機關規劃辦理，必要時，應會同主管教育行政機關為之。中央主管教育行政機關應設置原住民族一般教育專責單位。
 
-> 釋：各級主管教育行政機關為獎勵學校、機構、團體及人員參與原住民族教育事務，並提升從事原住民族教育人員之教學素質，及激勵其服務熱忱，對於成效優良者，應予獎助。
+> 釋：照黨團協商條文通過。
 
-* 32 本法之施行細則，由中央主管教育行政機關會同中央原住民主管機關共同訂定之。
+* 4 本法用詞定義如下：一、原住民族教育：為原住民族之一般教育及民族教育之統稱。二、一般教育：指依原住民學生教育需要，對原住民學生所實施之一般性質教育。三、民族教育：指依原住民族文化特性，對原住民學生所實施之傳統民族文化教育。四、原住民族學校：指為原住民族需要所設立，重視傳統民族文化教育之學校。五、原住民教育班：指為原住民學生教育需要，於一般學校中開設之班級。六、原住民重點學校：指原住民學生達一定人數或比例之中小學；其人數或比例於本法施行細則定之。七、原住民族教育師資：指於原住民族學校、原住民教育班或原住民重點學校擔任原住民族教育課程教學之師資。八、部落社區教育：指提供原住民族終身學習課程、促進原住民族文化之創新，培育部落社區發展人才及現代化公民所實施之教育。
 
-> 釋：本法施行細則之訂定機關。
+> 釋：照黨團協商條文通過。
 
-* 33 本法自公布日施行。
+* 5 各級政府應採積極扶助之措施，確保原住民接受各級各類教育之機會均等，並建立符合原住民族需求之教育體系。
 
-> 釋：規定本法施行日期`。
+> 釋：照黨團協商條文通過。
+
+* 6 中央原住民族主管機關應設立民族教育審議委員會，負責諮詢、審議民族教育政策事項。前項委員會由教師、家長、專家學者組成，其中具原住民身分者，不得少於二分之一，並應兼顧族群比例；其設置辦法，由中央原住民族主管機關會同中央主管教育行政機關定之。中央民族教育審議委員會應與地方政府定期辦理聯繫會報
+
+> 釋：照黨團協商條文通過。
+
+* 7 直轄市、縣（市）主管機關得視需要，設立直轄市、縣（市）民族教育審議委員會，負責諮詢、審議地方民族教育事項。前項委員會成員中具原住民身分者，不得少於二分之一；其設置規定，由直轄市、縣（市）主管機關定之。
+
+> 釋：照黨團協商條文通過。
+
+* 8 各級政府得視需要，寬列原住民重點學校員額編制，於徵得設籍於該學區年滿二十歲居民之多數同意，得合併設立學校或實施合併教學。
+
+> 釋：照黨團協商條文通過。
+
+* 9 中央政府應寬列預算，專款辦理原住民族教育；其比例合計不得少於中央主管教育行政機關預算總額之百分之一．二。各級政府應鼓勵國內外組織、團體及個人捐資興助原住民族教育。
+
+> 釋：照黨團協商條文通過。
+
+* 10 原住民族地區應普設公立幼稚園，提供原住民幼兒入學機會。原住民幼兒有就讀公立幼稚園之優先權。政府對於就讀公私立幼稚園之原住民幼兒，視實際需要補助其學費，其補助辦法，由中央主管教育行政機關會同中央原住民族主管機關定之。中央社政主管機關，對於原住民幼兒之托育服務，應比照前三項規定辦理。
+
+> 釋：照黨團協商條文通過。
+
+* 11 各級政府得視需要設立各級原住民族學校或原住民教育班，以利就學，並維護其文化。
+
+> 釋：照黨團協商條文通過。
+
+* 12 高級中等以下學校得辦理原住民學生住宿，由生活輔導人員管理之；其住宿及伙食費用，由中央政府編列預算全額補助。
+
+> 釋：照黨團協商條文通過。
+
+* 13 高級中等以下學校應主動發掘原住民學生特殊潛能，並依其性向、專長，輔導其適性發展。前項所需輔導經費，由中央政府編列預算酌予補助。
+
+> 釋：照黨團協商條文通過。
+
+* 14 高級中等以下學校於原住民學生就讀時，均應實施民族教育；其原住民學生達一定人數或比例時，應設立民族教育資源教室，進行民族教育及一般課業輔導。前項人數或比例，由中央原住民族主管機關會同中央主管教育行政機關公告之。
+
+> 釋：照黨團協商條文通過。
+
+* 15 直轄市、縣（市）主管機關應擇定一所以上學校，設立民族教育資源中心，支援轄區內或鄰近地區各級一般學校之民族教育。
+
+> 釋：照黨團協商條文通過。
+
+* 16 高級中等以上學校，應保障原住民學生入學及就學機會，必要時，得採額外保障辦理；公費留學並應提供名額，保障培育原住民之人才；其辦法，由中央主管教育行政機關定之。
+
+> 釋：照黨團協商條文通過。
+
+* 17 為發展原住民之民族學術，培育原住民高等人才及培養原住民族教育師資，以促進原住民於政治、經濟、教育、文化、社會等各方面之發展，政府應鼓勵大學設相關院、系、所、中心。前項大學院、系、所、中心辦理與原住民教育相關事項，中央原住民族主管機關得編列預算酌予補助。
+
+> 釋：照黨團協商條文通過。
+
+* 18 大專校院之原住民學生達一定人數或比例者，各級政府應鼓勵設置原住民族學生資源中心，以輔導其生活及學業；其人數或比例，由中央原住民族主管機關會同中央主管教育行政機關公告之。前項所需經費，由中央政府編列預算酌予補助。
+
+> 釋：照黨團協商條文通過。
+
+* 19 各級政府對於原住民學生就讀高級中等學校，應補助其助學金，就讀專科以上學校，應減免其學雜費；其補助、減免及其他應遵行事項之辦法，由各該主管教育行政機關定之。各級政府對於原住民學生應提供教育獎助，並採取適當優惠措施，以輔導其就學。各大專校院應就其學雜費收入所提撥之學生就學獎助經費，優先協助清寒原住民學生。
+
+> 釋：照黨團協商條文通過。
+
+* 20 各級各類學校相關課程及教材，應採多元文化觀點，並納入原住民各族歷史文化及價值觀，以增進族群間之瞭解及尊重。
+
+> 釋：照黨團協商條文通過。
+
+* 21 各級政府對學前教育及國民教育階段之原住民學生，應提供學習其族語、歷史及文化之機會。
+
+> 釋：照黨團協商條文通過。
+
+* 22 各級各類學校有關民族教育之課程發表及教材選編，應尊重原住民之意見，並邀請具原住民身分之代表參與規劃設計。原住民族中、小學及原住民重點學校之民族教育教材，由直轄市、縣（市）民族教育審議委員會依地方需要審議之。
+
+> 釋：照黨團協商條文通過。
+
+* 23 為保障原住民族教育師資之來源，各師資培育之大學招生，應保留一定名額予原住民學生，並得依地方政府之原住民族教育師資需求，提供公費名額或設師資培育專班。
+
+> 釋：照黨團協商條文通過。
+
+* 24 原住民族教育師資應修習原住民族文化或多元文化教育課程，以增進教學之專業能力；其課程、學分、研習時數及其他應遵行事項之辦法，由中央原住民族主管機關會同中央主管教育行政機關定之。擔任族語教學之師資，應通過族語能力認證；其認證辦法，由中央原住民族主管機關定之。
+
+> 釋：照黨團協商條文通過。
+
+* 25 原住民族中、小學、原住民教育班及原住民重點學校之專任教師甄選，應優先聘任原住民各族教師。原住民族中、小學及原住民重點學校主任、校長，應優先遴選原住民各族群中已具主任、校長資格者擔任。前二項教師、主任、校長之聘任或遴選辦法，由中央主管教育行政機關會同中央原住民族主管機關定之。
+
+> 釋：照黨團協商條文通過。
+
+* 26 各級各類學校為實施原住民族語言、文化及藝能有關之支援教學，得遴聘原住民族耆老或具相關專長人士；其認證辦法，由中央原住民族主管機關定之。
+
+> 釋：照黨團協商條文通過。
+
+* 27 中央原住民族主管機關為提升原住民族教育師資之專業能力，得辦理民族教育研習工作。
+
+> 釋：照黨團協商條文通過。
+
+* 28 地方政府得設立或輔導民間設立原住民族推廣教育機構，提供原住民下列教育：一、識字教育。二、各級學校補習或進修教育。三、民族技藝、特殊技能或職業訓練。四、家庭教育。五、語言文化教育。六、部落社區教育。七、人權教育。八、婦女教育。九、其他成人教育。前項第一款及第二款教育之費用，由中央政府全額補助；其他各款視需要補助之。
+
+> 釋：照黨團協商條文通過。
+
+* 29 為設置原住民族專屬頻道及經營文化傳播媒體事業，以傳承原住民族文化教育，中央原住民族主管機關應編列經費及接受私人或法人團體之捐助，成立財團法人原住民族文化事業基金會；其董事、監察人之人數，原住民各族代表不得少於三分之一。前項基金會成立前，中央原住民族主管機關於會商目的事業主管機關後，得指定公共電視、教育廣播電臺及有線廣播電視系統經營者提供時段或頻道，播送原住民族節目。中央原住民族主管機關應於電腦網路中設置專屬網站。第一項基金會之組織，另以法律定之。
+
+> 釋：照黨團協商條文通過。
+
+* 30 中央政府應視需要設置行政法人原住民族文化中心或博物館，必要時，得以既有收藏原住民族文物之博物館辦理改制；其組織，另以法律定之。從事前項事務之相關人員，應熟悉原住民族語言文化，並應優先進用具有原住民身分之相關專業人員。
+
+> 釋：照黨團協商條文通過。
+
+* 31 各級各類學校及社會教育文化機構應依據原住民族需要，結合公、私立機構及社會團體，提供原住民社會教育及文化活動機會，並加強其家庭教育。
+
+> 釋：照黨團協商條文通過。
+
+* 32 各級政府得設民族教育研究發展機構或委託相關學校、學術機構、團體，從事民族教育課程、教材及教學之實驗、研究及評鑑、研習以及其他有關原住民族教育發展事項。原住民族教育之各項實驗、研究及評鑑，其規劃與執行，應有多數比例之具有原住民身分代表參與。
+
+> 釋：照黨團協商條文通過。
+
+* 33 各級政府對於從事民族教育之學校、機構、團體及人員，其成效優良者，應予獎助。
+
+> 釋：照黨團協商條文通過。
+
+* 34 本法施行細則，由中央主管教育行政機關會同中央原住民族主管機關定之。
+
+> 釋：照黨團協商條文通過。
+
+* 35 本法自公布日施行。
+
+> 釋：照黨團協商條文通過。
 
 * 310 各級各類學校及社會教育文化機構應依據原住民族需要，結合公、私立機構及社會團體，提供原住民社會教育及文化活動機會，並加強其家庭教育。
 
